src/types/tests/snapshots/tgbot__types__tests__message__text_quote.snap
---
source: src/types/tests/message.rs
expression: "TextQuote::new(0, \"test\")"
---
{
  "position": 0,
  "text": "test"
}
