src/types/tests/snapshots/tgbot__types__tests__message__unique_gift.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "unique_gift": {
    "gift": {
      "backdrop": {
        "colors": {
          "center_color": 1,
          "edge_color": 2,
          "symbol_color": 3,
          "text_color": 4
        },
        "name": "name",
        "rarity_per_mille": 5
      },
      "base_name": "base-name",
      "model": {
        "name": "name",
        "rarity_per_mille": 6,
        "sticker": {
          "file_id": "file-id",
          "file_unique_id": "file-unique-id",
          "height": 512,
          "is_animated": false,
          "is_video": false,
          "type": "regular",
          "width": 512
        }
      },
      "name": "name",
      "number": 7,
      "symbol": {
        "name": "name",
        "rarity_per_mille": 8,
        "sticker": {
          "file_id": "file-id",
          "file_unique_id": "file-unique-id",
          "height": 512,
          "is_animated": false,
          "is_video": false,
          "type": "regular",
          "width": 512
        }
      }
    },
    "origin": "transfer"
  }
}
